--- a/vim/templates/pandoc.tex
+++ b/vim/templates/pandoc.tex
@@ -192,6 +192,7 @@ $endif$
 $if(author)$
 \author{$for(author)$$author$$sep$ \and $endfor$}
 $endif$
+\usepackage[nodayofweek]{datetime}
 \date{$date$}
 $for(header-includes)$
 $header-includes$
